--- a/css/scss/singlemp.scss
+++ b/css/scss/singlemp.scss
@@ -96,7 +96,20 @@
 }
 
 
+#mp-container {
+  display: flex;
+  justify-content: space-between;
 
+  flex-wrap: wrap;
+
+  .mp-index {
+    position: relative;
+    top: -20px;
+  }
+  .image-crop {
+    border-bottom: 0;
+  }
+}
 
 
 .mp-index-tag {
@@ -161,17 +174,16 @@
 .score-circle {
   margin:auto
 }
-
-.score-desc {
-  display:block;
-  font-weight:normal;
-}
 .score {
   text-align: center;
   color:#333;
   font-weight:bold;
-  width:205px;
-position:relative;
+
+  display: flex;
+  justify-content:center;
+  align-content:center;
+  flex-direction:column;
+  position: relative;
   .score-num {
     position: absolute;
     top: 35%;
@@ -230,22 +242,6 @@ position:relative;
     left: 31%;
 
   }
-
-  .score-num.ten{
-    color: #53992B;
-    left: 31%;
-
-  }
-
-  .score-num.cross{
-    color: #EA222D;
-    left: 40%;
-  }
-
-  .score-num.check{
-    color: #53992B;
-    left: 40%;
-  }
 }
 
 
@@ -265,29 +261,12 @@ circle {
 #gray{
   stroke: #AAA;
 }
-
-#cross {
-  stroke: #EA222D;
-  fill:#eeeeed;
-  stroke-dasharray: 284, 284; /* length of arc, circumference of circle */
-  stroke-dashoffset: 240; /* offset of arc from start point (1/2 arc length + 1/4 circumference (71) ) */  
-}
-
-#check {
-  stroke: #53992B;
-  fill:#eeeeed;
-  stroke-dasharray: 284, 284; /* length of arc, circumference of circle */
-  stroke-dashoffset: 0; /* offset of arc from start point (1/2 arc length + 1/4 circumference (71) ) */
-}
-
 #one{
   stroke: #EA222D;
   fill:#eeeeed;
   stroke-dasharray: 284, 284; /* length of arc, circumference of circle */
   stroke-dashoffset: 240; /* offset of arc from start point (1/2 arc length + 1/4 circumference (71) ) */
 }
-
-
 
 #two{
   stroke: #EA222D;
