--- a/css/main.css
+++ b/css/main.css
@@ -221,66 +221,6 @@ button:focus {
   outline: 0;
 }
 
-#mp-container {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-}
-
-#mp-container .mp-index {
-  padding-left: 3px;
-  position: relative;
-  top: -20px;
-}
-
-#mp-container .image-crop {
-  border-bottom: 0;
-}
-
-.mp-index-tag {
-  position: absolute;
-  bottom: 0px;
-  width: 142px;
-  padding: 5px;
-  background-color: grey;
-  color: white;
-  font-size: 12px;
-  max-height: 0;
-  overflow: hidden;
-  cursor: pointer;
-  transition: max-height .2s ease-in-out;
-}
-
-.mp-index-tag span:first-child {
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.mp-index-tag span {
-  transition: visibility .2s ease-in-out;
-  visibility: hidden;
-}
-
-.mp-index-tag.lib {
-  background-color: rgba(237, 46, 56, 0.8);
-}
-
-.mp-index-tag.con {
-  background-color: rgba(0, 35, 149, 0.8);
-}
-
-.mp-index-tag.bloc {
-  background-color: rgba(0, 136, 206, 0.8);
-}
-
-.mp-index-tag.green {
-  background-color: rgba(66, 119, 48, 0.8);
-}
-
-.mp-index-tag.ndp {
-  background-color: rgba(255, 88, 0, 0.8);
-}
-
 .mp-hover + .mp-index-tag span {
   display: block;
 }
@@ -487,6 +427,21 @@ form button {
   display: block;
 }
 
+#mp-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+#mp-container .mp-index {
+  position: relative;
+  top: -20px;
+}
+
+#mp-container .image-crop {
+  border-bottom: 0;
+}
+
 .mp-index-tag {
   position: absolute;
   bottom: 0px;
@@ -557,16 +512,14 @@ form button {
   margin: auto;
 }
 
-.score-desc {
-  display: block;
-  font-weight: normal;
-}
-
 .score {
   text-align: center;
   color: #333;
   font-weight: bold;
-  width: 205px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
   position: relative;
 }
 
@@ -618,21 +571,6 @@ form button {
   left: 31%;
 }
 
-.score .score-num.ten {
-  color: #53992B;
-  left: 31%;
-}
-
-.score .score-num.cross {
-  color: #EA222D;
-  left: 40%;
-}
-
-.score .score-num.check {
-  color: #53992B;
-  left: 40%;
-}
-
 .mp-column {
   width: 30%;
 }
@@ -649,24 +587,6 @@ circle {
 
 #gray {
   stroke: #AAA;
-}
-
-#cross {
-  stroke: #EA222D;
-  fill: #eeeeed;
-  stroke-dasharray: 284, 284;
-  /* length of arc, circumference of circle */
-  stroke-dashoffset: 240;
-  /* offset of arc from start point (1/2 arc length + 1/4 circumference (71) ) */
-}
-
-#check {
-  stroke: #53992B;
-  fill: #eeeeed;
-  stroke-dasharray: 284, 284;
-  /* length of arc, circumference of circle */
-  stroke-dashoffset: 0;
-  /* offset of arc from start point (1/2 arc length + 1/4 circumference (71) ) */
 }
 
 #one {
@@ -774,8 +694,8 @@ circle {
 
 @font-face {
   font-family: 'fontello';
-  src: url("../../fonts/fontello.eot?70834502");
-  src: url("../../fonts/fontello.eot?70834502#iefix") format("embedded-opentype"), url("../../fonts/fontello.woff2?70834502") format("woff2"), url("../../fonts/fontello.woff?70834502") format("woff"), url("../../fonts/fontello.ttf?70834502") format("truetype"), url("../../fonts/fontello.svg?70834502#fontello") format("svg");
+  src: url("../../fonts/fontello.eot?26630629");
+  src: url("../../fonts/fontello.eot?26630629#iefix") format("embedded-opentype"), url("../../fonts/fontello.woff2?26630629") format("woff2"), url("../../fonts/fontello.woff?26630629") format("woff"), url("../../fonts/fontello.ttf?26630629") format("truetype"), url("../../fonts/fontello.svg?26630629#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -786,7 +706,7 @@ circle {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?70834502#fontello') format('svg');
+    src: url('../font/fontello.svg?26630629#fontello') format('svg');
   }
 }
 */
@@ -856,16 +776,6 @@ circle {
 }
 
 /* '' */
-.icon-ok:before {
-  content: '\e808';
-}
-
-/* '' */
-.icon-cancel:before {
-  content: '\e809';
-}
-
-/* '' */
 @media (max-width: 1100px) {
   #mp-container .mp-index {
     flex-basis: 25%;
